--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # NeonDB PostgreSQL
-DATABASE_URL='postgresql://neondb_owner:npg_k8MVghzbNO1U@ep-damp-feather-adgeb816-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require'
+DATABASE_URL=postgresql://neondb_owner:npg_k8MVghzbNO1U@ep-damp-feather-adgeb816-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
 
 # Kafka Confluent Cloud
 KAFKA_BOOTSTRAP_SERVERS=pkc-921jm.us-east-2.aws.confluent.cloud:9092
